force-app/main/default/objects/Mohan_rao__c/Mohan_rao__c.object-meta.xml
<CustomObject>
    <description>Personal data</description>
    <label>Mohan_rao</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mohan_raos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>