force-app/main/default/objects/Mohan_rao__c/fields/Enter_your_favorite_sports__c.field-meta.xml
<CustomField>
    <fullName>Enter_your_favorite_sports__c</fullName>
    <label>Enter your favorite sports</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>