force-app/main/default/objects/Mohan_rao__c/fields/Job_location__c.field-meta.xml
<CustomField>
    <fullName>Job_location__c</fullName>
    <label>Job_location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bengaluru,</fullName>
            </value>
            <value>
                <fullName>Chennai,</fullName>
            </value>
            <value>
                <fullName>Delhi,</fullName>
            </value>
            <value>
                <fullName>Hyderabad,</fullName>
            </value>
            <value>
                <fullName>Kolkata,</fullName>
            </value>
            <value>
                <fullName>Mumbai,</fullName>
            </value>
            <value>
                <fullName>Visakhapatnam.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>