force-app/main/default/objects/Mohan_rao__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Mohan_raos</relationshipLabel>
    <relationshipName>Mohan_raos</relationshipName>
    <type>Lookup</type>
</CustomField>