force-app/main/default/objects/Mohan_rao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enter_your_favorite_sports__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Job_location__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Phone_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>